force-app/main/default/objects/Case/fields/fecha_camui__c.field-meta.xml
<CustomField>
    <fullName>fecha_camui__c</fullName>
    <label>fecha camui</label>
    <type>Date</type>
</CustomField>