force-app/main/default/objects/Case/fields/Idea__c.field-meta.xml
<CustomField>
    <fullName>Idea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Idea</label>
    <referenceTo>Idea__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>