force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GC1040</fullName>
            </value>
            <value>
                <fullName>Solar Panels</fullName>
            </value>
            <value>
                <fullName>Inverters</fullName>
            </value>
            <value>
                <fullName>Charge Controllers</fullName>
            </value>
            <value>
                <fullName>Batteries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>