force-app/main/default/objects/Case/recordTypes/Product_Support.recordType-meta.xml
<RecordType>
    <fullName>Product_Support</fullName>
    <active>true</active>
    <businessProcess>Product Support Process</businessProcess>
    <description>Record type for product support cases</description>
    <label>Product Support</label>
</RecordType>